<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FtoCActivity">

    <TextView
        android:id="@+id/FtoC_title_TextView"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/fahrenheit_to_celsius_converter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FtoCEditText"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:hint="@string/enter_a_value_to_convert"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FtoC_title_TextView" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:id="@+id/fahrenheit_value_label_TextView"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/FtoCEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fahrenheit_value"
        android:labelFor="@id/FtoCEditText" />

    <Button
        android:id="@+id/fahrenheit_convert_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:onClick="displayConvertedValue"
        android:text="@string/convert"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fahrenheit_value_label_TextView" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:id="@+id/fahrenheit_converted_value_textView"
        app:layout_constraintTop_toBottomOf="@id/fahrenheit_convert_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="°C"
        android:gravity="center"
        android:textSize="24sp" />


</androidx.constraintlayout.widget.ConstraintLayout>